Detalles finales solucionados

--- a/CarHub/off-road.html
+++ b/CarHub/off-road.html
@@ -37,20 +37,19 @@
     <main>
 
         <section class="off-road">
+            <div>
+            </div>
             <div class="offroad-text">
                 <h1>No te quedes sin vivir la adrenalina del OFF-ROAD</h1>
                 <h2>Contamos con las mejores opciones del mercado</h2>
-                <p >Lorem ipsum, dolor sit amet consectetur adipisicing elit. A culpa qui saepe laboriosam voluptatibus quo, hic accusantium, iusto excepturi perferendis nemo, molestiae amet</p>
-            </div>
-            <div>
-
+                <p class="texto-parrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. A culpa qui saepe laboriosam voluptatibus quo, hic accusantium, iusto excepturi perferendis nemo, molestiae amet</p>
             </div>
         </section>
             
 
 
         <section class="box-center">
-            <h1>Nuestras máquinas con 20% OFF</h1>
+            <h1>Nuestras máquinas con 20% OFF</h1><br>
             <div class="catalogo-container">
                 <div class="card">
                     <div class="card-container">
@@ -97,9 +96,9 @@
     <footer>
         <section class="footer-container box-center">
             <article>
-                <h class="texto-contacto">Jairo Erazo</h3>
+                <h3>Jairo Erazo</h3>
                 <p class="footer-parrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit praesentium rem id ab.</p>
-                <div class="icons marge">
+                <div class="icons">
                     <a href="#"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                         <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3"></path>
@@ -129,10 +128,10 @@
             </article>
 
             <article>
-                <h3 class="texto-contacto">contactanos</h3>
-                <p><strong>Telefono:</strong> +503 7575-9078</p>
-                <p><strong>Dirección:</strong> Chalchuapa, Santa Ana</p>
-                <p><strong>Correo Electrónico</strong>example@outlook.com</p>
+                <h3>contactanos</h3>
+                <p class="footer-parrafo"><strong>Telefono:</strong> +503 7575-9078</p>
+                <p class="footer-parrafo"><strong>Dirección:</strong> Chalchuapa, Santa Ana</p>
+                <p class="footer-parrafo"><strong>Correo Electrónico</strong>example@outlook.com</p>
             </article>
         </section>
         <section>
