--- a/CarHub/suv.html
+++ b/CarHub/suv.html
@@ -42,48 +42,46 @@
                 <h2>Contamos con las mejores opciones del mercado</h2>
                 <p >Lorem ipsum, dolor sit amet consectetur adipisicing elit. A culpa qui saepe laboriosam voluptatibus quo, hic accusantium, iusto excepturi perferendis nemo, molestiae amet</p>
             </div>
-            <div>
-
-            </div>
         </section>
             
 
 
         <section class="box-center">
+            <h1>LAS SUV'S MAS LUJOSAS DE LA REGIÓN</h1>
             <div class="catalogo-container">
                 <div class="card">
                     <div class="card-container">
-                        <h5 class="card-tittle">Izuzu D-Max 2023</h5>
+                        <h5 class="card-tittle">Toyota Sequoa</h5>
                         <button class="btn btn-card">Cotizar</button>
                     </div>
                 </div>    
                 <div class="card">
                     <div class="card-container">
-                        <h5 class="card-tittle">Toyota Tacoma 2022</h5>
+                        <h5 class="card-tittle">Porsche Macan</h5>
                         <button class="btn btn-card">Cotizar</button>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-container">
-                        <h5 class="card-tittle">Chevy Silverado 2020</h5>
+                        <h5 class="card-tittle">BMW X3</h5>
                         <button class="btn btn-card">Cotizar</button>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-container">
-                        <h5 class="card-tittle">Jeep Gladiador 2018</h5>
+                        <h5 class="card-tittle">Toyota Highlander</h5>
                         <button class="btn btn-card">Cotizar</button>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-container">
-                        <h5 class="card-tittle">Ford Bronco 2023</h5>
+                        <h5 class="card-tittle">Urus</h5>
                         <button class="btn btn-card">Cotizar</button>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-container">
-                        <h5 class="card-tittle">Ram TRX 2023</h5>
+                        <h5 class="card-tittle">Escalade</h5>
                         <button class="btn btn-card">Cotizar</button>
                     </div>
                 </div>
@@ -92,7 +90,7 @@
 
         <section class="off-sale">
             <h1>Aprovecha el OFF-SALE en nuestros vehiculos Off-Road</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque iure ea facilis ad architecto illum illo voluptatibus omnis dicta iste non nostrum, cumque nesciunt vel dolorum saepe nulla</p>
+            <p class="texto-parrafo2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque iure ea facilis ad architecto illum illo voluptatibus omnis dicta iste non nostrum, cumque nesciunt vel dolorum saepe nulla</p>
             <div class="ubi"><a href="./off-road.html"><button class="btn-off">Ir Ahora</button></a></div>
         </section>
 
@@ -103,9 +101,9 @@
     <footer>
         <section class="footer-container box-center">
             <article>
-                <h3 class="texto-contacto">Jairo Erazo</h3>
+                <h3>Jairo Erazo</h3>
                 <p class="footer-parrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit praesentium rem id ab.</p>
-                <div class="icons marge">
+                <div class="icons">
                     <a href="#"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                         <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3"></path>
@@ -135,10 +133,10 @@
             </article>
 
             <article>
-                <h3 class="texto-contacto">contactanos</h3>
-                <p><strong>Telefono:</strong> +503 7575-9078</p>
-                <p><strong>Dirección:</strong> Chalchuapa, Santa Ana</p>
-                <p><strong>Correo Electrónico</strong>example@outlook.com</p>
+                <h3>contactanos</h3>
+                <p class="footer-parrafo"><strong>Telefono:</strong> +503 7575-9078</p>
+                <p class="footer-parrafo"><strong>Dirección:</strong> Chalchuapa, Santa Ana</p>
+                <p class="footer-parrafo"><strong>Correo Electrónico</strong>example@outlook.com</p>
             </article>
         </section>
         <section>
