--- a/CarHub/index.html
+++ b/CarHub/index.html
@@ -40,7 +40,7 @@
             <div class="nosotros-text">
                 <h1>¿Quienes somos?</h1>
                 <h2>Somos el dealer mas grande de El Salvador de autos de gama alta</h2>
-                <p >Lorem ipsum, dolor sit amet consectetur adipisicing elit. A culpa qui saepe laboriosam voluptatibus quo, hic accusantium, iusto excepturi perferendis nemo, molestiae amet facere? Beatae hic dolore quisquam debitis veniam?</p>
+                <p class="texto-parrafo" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. A culpa qui saepe laboriosam voluptatibus quo, hic accusantium, iusto excepturi perferendis nemo, molestiae amet facere? Beatae hic dolore quisquam debitis veniam?</p>
             </div>
         </section> 
 
@@ -57,8 +57,8 @@
 
         <section class="off-sale">
             <h1>Aprovecha el OFF-SALE en nuestros vehiculos Off-Road</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque iure ea facilis ad architecto illum illo voluptatibus omnis dicta iste non nostrum, cumque nesciunt vel dolorum saepe nulla</p>
-            <div class="ubi"><a href="#"><button class="btn-off">Ir Ahora</button></a></div>
+            <p class="texto-parrafo2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque iure ea facilis ad architecto illum illo voluptatibus omnis dicta iste non nostrum, cumque nesciunt vel dolorum saepe nulla</p>
+            <div class="ubi"><a href="./off-road.html"><button class="btn-off">Ir Ahora</button></a></div>
         </section>
     </main>
 
@@ -67,7 +67,7 @@
             <article>
                 <h3>Jairo Erazo</h3>
                 <p class="footer-parrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit praesentium rem id ab.</p>
-                <div class="icons marge">
+                <div class="icons">
                     <a href="#"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                         <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3"></path>
@@ -98,9 +98,9 @@
 
             <article>
                 <h3 class="texto-contacto">contactanos</h3>
-                <p><strong>Telefono:</strong> +503 7575-9078</p>
-                <p><strong>Dirección:</strong> Chalchuapa, Santa Ana</p>
-                <p><strong>Correo Electrónico</strong>example@outlook.com</p>
+                <p class="footer-parrafo"><strong>Telefono:</strong> +503 7575-9078</p>
+                <p class="footer-parrafo"><strong>Dirección:</strong> Chalchuapa, Santa Ana</p>
+                <p class="footer-parrafo"><strong>Correo Electrónico</strong>example@outlook.com</p>
             </article>
         </section>
         <section>
