--- a/CarHub/index.html
+++ b/CarHub/index.html
@@ -12,26 +12,20 @@
         <nav>
             <div class="nav-container-1">
                 <div class="nav-items">
+                    <input type="checkbox" id="check">
+                    <label for="check" class="checkbtn">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
+                    </label>
                     <a  href="#"><img src="./assets/img/pngwing.com.png" alt=""></a>
                     <ul>
-                        <li><a href="#">Inicio</a></li>
-                        <li>Categorías:</li>
+                        <li><a href="#">Inicio</a></li><hr>
+                        Categorías: <hr>
                         <li><a href="./suv.html">Suv</a></li>
                         <li><a href="./off-road.html">Off-Road</a></li>
                         <li><a href="./deportivos.html">Deportivos</a></li>
 
                     </ul>
                 </div>
-
-                <div class="nav-part2">
-                    <ul>
-                        <li><a href="#">Contactanos</a></li>
-                        <li><a href="#">Registrate</a></li>
-                        <li><a href="#">Iniciar Sesión</a></li>
-                    </ul>
-                </div>
-            </div>
-            
         </nav>
     </header>
 
